<resources>
    <string name="app_name">SpeedDial</string>

    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>

    <string name="assign_contact"> Assign a Contact </string>
    <string name="no_contact_set">No Contact Has Been Set Yet</string>
    <string name="lauch_view">Choose a number and assign a contact</string>

</resources>
