<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    tools:context="com.shopback.speeddial.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="25sp"
            tools:text="John Tan"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>

        <TextView
            android:id="@+id/contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:gravity="center"
            android:textSize="22sp"
            tools:text="98765432"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/number_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            tools:text="5"
            android:textSize="30sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/assign_contact_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/assign_contact"
                android:background="@android:color/holo_blue_light"
                android:enabled="false"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/button_num_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_2"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button_num_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_3"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_num_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_4"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button_num_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_5"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button_num_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_6"
                android:textSize="25sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_num_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_7"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button_num_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_8"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/button_num_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_9"
                android:textSize="25sp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
